[package]
name = "dogfood"
version = "0.1.0"
edition = "2021"

[dependencies]
unreact = { version = "0.5.4", default-features = false }
markdown = "0.3.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
handlebars = "4.3.6"
regex-macro = "0.2.0"

[features]
default = ["unreact/watch"]
